# Rolify

./: .gitignore  README.md
.github/workflows/: backend-ci.yml  backend-deploy.yml  ios-build.yml  scraping-ci.yml  scraping-cron.yml
apps/backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: config.ts  server.ts
apps/backend/src/lib/: crypto.ts  prisma.ts  redis.ts  s3.ts  spotifyClient.ts  stations.ts
apps/backend/src/plugins/: auth.ts  errorHandler.ts
apps/backend/src/routes/: admin.ts  albums.ts  artists.ts  auth.ts  browse.ts  dynamic.ts  health.ts  jam.ts  lyrics.ts  (+9 more)
apps/ios/: README.md  generate_icon.py  project.yml
apps/ios/Rolify/: API.swift  ContentView.swift  Info.plist  Player.swift  RolifyApp.swift
docs/screenshots/: README.md
infra/: .env.example  docker-compose.pi.yml  docker-compose.yml  nginx.conf
scraping/: .env.example  Dockerfile  pyproject.toml  requirements.txt
scraping/music_acquirer/: config.py  downloader.py  encryptor.py  loader.py  pipeline.py  spotify_meta.py  tiktok_meta.py  transcoder.py  youtube_match.py  yt_meta.py
scraping/scraper_worker/: worker.py
scraping/scripts/: discover_and_scrape.py  refresh_dynamic_playlists.py  retro_create_playlists.py  retry_failed_tracks.py  scrape_artists.py  yt_mass_scrape.py
scraping/ui_scraper/: config.py  orchestrator.py
scraping/ui_scraper/agents/: __init__.py  app_store_gallery.py  base.py  colors.py  flows.py  icons.py  screenshots.py  spotify_brand.py  spotify_web_player.py  typography.py
(+44 files in other folders)
